removing sticky from footer & fix contact page alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,9 @@ p {
   height: 60px;
   left: 0;
   padding: 20px;
-  position: fixed;
+  position: relative;
   text-align: center;
-  width: 100%;
+  width: 100vw;
 }
 
 #pic {
@@ -85,13 +85,9 @@ p {
 }
 
 .contact {
-  padding: 10%;
-}
-
-.conactCard {
-  background-color: #900;
-  text-align: center;
-  width: 250px;
+  width: 100%;
+  height: 77vh;
+  padding-top: 20vh;
 }
 
 .container {
@@ -122,17 +118,13 @@ p {
   animation: moveInLeft 2s ease-in;
 }
 
+.footer-row {
+  width: 100%;
+}
+
 .form-control {
   margin: 0 0 2rem 0;
   background-color: #e2e2e2;
-}
-
-.footer-container {
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .icon {
@@ -220,7 +212,7 @@ p {
 }
 
 .row {
-  padding: 25px 50px;
+  /* padding: 25px 50px; */
 }
 
 .webApps {
